--- a/P1/styles.css
+++ b/P1/styles.css
@@ -4,38 +4,47 @@ body{
     background-attachment: fixed;
     background-size: cover;
   }
-  .Direccion{
-    text-align: left;
-    font-style: italic;
-    font-size: 15px;
+  .Cabecera{
+    text-align: right;
+    background-color: rgb(0, 41, 75);
+    color: cornsilk;
+    font-family:cursive;
+    padding-top: 2px;
+    padding-right: 20px;
+    padding-bottom: 2px;
   }
-
-  #LadoIzquierdo , #LadoDerecho{
-    margin-top: 10px;
-    padding-bottom: 700px;
-    padding: 20px;
-  }
-  #ParteCentral{
+  .Portada{
     text-align: center;
-    background-color: lightblue;
-    
+    font-family:cursive;
+    padding-top: 2px;
+    padding-right: 20px;
+    padding-bottom: 2px;
   }
-
+  .Producto{
+    text-align: center;
+    background-color: rgb(0, 41, 75);
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  .Oferta{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .End_Page{
+    text-align: center;
+    font-family:cursive;
+    background-color: lightblue;
+    padding-top: 2px;
+    padding-right: 20px;
+    padding-bottom: 2px;
+  }
   #Logos{
     height: 200px;
-    padding-left: 20%;
-    padding-right: 20%;
     text-align: center;
-
     }
   .Botones{
     text-align: center;
     margin-bottom: 20px;
-  }
-  .Page{
-    margin-left: 16.8%;
-    background-color: lightblue;
-    width:1260px;
   }
 
   .button {
@@ -76,30 +85,15 @@ body{
       right: 0;
     }
 
-  .Cabecera{
-    text-align: right;
-    background-color: rgb(0, 41, 75);
-    color: cornsilk;
-    font-family:cursive;
-    padding-top: 2px;
-    padding-right: 20px;
-    padding-bottom: 2px;
-  }
-
   #b1{
     color: white;
     font-family:cursive;
   }
-  #b2{
+  p2{
     color: white;
     text-align: center;
     font-family: cursive;
     font-size: 10px;
-  }
-
-  #ForAca{
-    text-align: left;
-    font-style:oblique;
   }
 
   h1{
@@ -109,6 +103,9 @@ body{
   }
   h2{
     text-align: center;
+  }
+  h3{
+    color: #000;
   }
   p{
     color: black;
