--- a/P1/styles.css
+++ b/P1/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(202, 255, 248);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -106,6 +106,7 @@ body{
   }
   h3{
     color: #000;
+    font-family: cursive;
   }
   p{
     color: black;
