--- a/P4/style.css
+++ b/P4/style.css
@@ -5,9 +5,12 @@ h1 {
     border-radius: 10px;
     text-align: center;
   }
-  
+
+.blue {
+    color: blue;
+}
+
   #display {
       border: 2px solid lightblue;
       padding: 10px;
   }
-
