--- a/P4/chat/css/styles.css
+++ b/P4/chat/css/styles.css
@@ -43,6 +43,8 @@ h2{
     overflow: auto;
     font-family: roman;
     border-radius: 4px;
+    text-align: left;
+    color: black;
 }
 
 .contenedor hr {
