--- a/P3/css/estilos.css
+++ b/P3/css/estilos.css
@@ -1,14 +1,44 @@
+body{
+    background-image: url('background.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+@font-face{
+    font-family: roman-normal;
+    src: url(./OPTIRomanaRoman-Normal.otf);
+}
+@font-face{
+    font-family: roman-bold;
+    src: url(./OPTIRomanaRoman-Bold.otf);
+}
+.titulo{
+    text-align: center;
+    background-color: cornflowerblue;
+    font-size: 20px;
+    margin: 20px auto;
+    width: 600px;
+    font-family: roman-bold;
+}
 .contenedor {
-    width: 250px;
+    width: 450px;
     height: 200px;
-    margin: 50px auto;
+    margin: 1px auto;
     padding: 20px;
     background: #fff;
     overflow: auto;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: roman-bold;
     border-radius: 4px;
 }
-
+.contenedor_pequeño{
+    width: 500px;
+    margin: auto;
+    border-radius: 10px;
+    font-family: roman-bold;
+}
+#msg_entry{
+    width: 490px;
+    border-radius: 10px;
+}
 .contenedor hr {
     background-color: #ff9d00;
     height: 5px;
